--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=https://backend-practice-forever.onrender.com
-VITE_API_BASE_URL=http://localhost:3001/api
+VITE_API_BASE_URL=https://backend-practice-forever.onrender.com/api
+# VITE_API_BASE_URL=http://localhost:3001/api
